--- a/flower_shop_app/templates/flower_shop_app/footer.html
+++ b/flower_shop_app/templates/flower_shop_app/footer.html
@@ -3,7 +3,7 @@
 <footer id="footer">
     <div class="container">
         <div class="footer">
-            <a href="/"><img src="{% static 'images/logo.svg' %}" alt="logo" class="logo footer__logo"></a>
+            <a href="/"><img src="{% static 'flower_shop_app/images/logo.svg' %}" alt="logo" class="logo footer__logo"></a>
             <nav>
                 <ul class="menu footer__menu ficc">
                     <li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
