--- a/flower_shop_app/templates/flower_shop_app/index.html
+++ b/flower_shop_app/templates/flower_shop_app/index.html
@@ -8,7 +8,7 @@
 		<header id="header">
 			<div class="container">
 				<div class="header ficb">
-					<a href="/"><img src="{% static 'images/logo.svg' %}" alt="logo" class="logo"></a>
+					<a href="/"><img src="{% static 'flower_shop_app/images/logo.svg' %}" alt="logo" class="logo"></a>
 					<nav>
 						<ul class="menu ficc">
 							<li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
@@ -27,7 +27,7 @@
 						<p class="banner__text">Подберем для вас букет за два шага, который идеально подойдет под вашу ситуацию</p>
 						<button class="btn banner__btn">Подобрать букет</button>
 					</div>
-					<img src="{% static 'images/bannerImg.png' %}" alt="banner Img" class="banner__img">
+					<img src="{% static 'flower_shop_app/images/bannerImg.png' %}" alt="banner Img" class="banner__img">
 				</div>
 			</div>
 		</section>
@@ -79,7 +79,7 @@
 							<a href="tel:89113966682" class="contacts__block_tel">8 (911) 39 66 682</a>
 						</div>
 					</div>
-					<img src="{% static 'images/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
+					<img src="{% static 'flower_shop_app/images/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
 					<div class="contacts__map">
 						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
 					</div>
