--- a/flower_shop_app/templates/flower_shop_app/index.html
+++ b/flower_shop_app/templates/flower_shop_app/index.html
@@ -12,8 +12,8 @@
 					<nav>
 						<ul class="menu ficc">
 							<li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
-							<li class="menu__item"><a href="#" class="menu__item_link">Рекомендации</a></li>
-							<li class="menu__item"><a href="#" class="menu__item_link">Контакты</a></li>
+							<li class="menu__item"><a href="#recommended" class="menu__item_link">Рекомендации</a></li>
+							<li class="menu__item"><a href="#contacts" class="menu__item_link">Контакты</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,27 +34,17 @@
 	</div>
 	<section id="recommended">
 		<div class="container">
-			<div class="recommended p100">
+			<div id="recommended" class="recommended p100">
 				<div class="title">Рекомендуем</div>
 				<div class="recommended__elems ficb">
-					<div class="recommended__block recommended__block_first">
-						<div class="recommended__block_elems ficb">
-							<span class="recommended__block_intro">Летнее утро</span>
-							<span class="recommended__block_price">3 600 руб</span>
-						</div>
-					</div>
-					<div class="recommended__block recommended__block_sec">
-						<div class="recommended__block_elems ficb">
-							<span class="recommended__block_intro">Зимняя сказка</span>
-							<span class="recommended__block_price">4 100 руб</span>
-						</div>
-					</div>
-					<div class="recommended__block recommended__block_thr">
-						<div class="recommended__block_elems ficb">
-							<span class="recommended__block_intro">Нежный</span>
-							<span class="recommended__block_price">2 900 руб</span>
-						</div>
-					</div>
+                    {% for bouquet in recommended_bouquets %}
+                       <div class="recommended__block" style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover;">
+						    <div class="recommended__block_elems ficb">
+					    		<span class="recommended__block_intro">{{ bouquet.name }}</span>
+					    		<span class="recommended__block_price">{{ bouquet.price|floatformat }} руб</span>
+					    	</div>
+					    </div>
+                    {% endfor %}
 				</div>
 				<button class="btn recommended__btn">Показать всю коллекцию</button>
 			</div>
@@ -62,7 +52,7 @@
 	</section>
 	<section id="contacts">
 		<div class="container">
-			<div class="contacts">
+			<div id="contacts" class="contacts">
 				<div class="title">Как нас найти</div>
 				<div class="contacts__elems ficb">
 					<div class="contacts__block">
