--- a/flower_shop_app/templates/flower_shop_app/index.html
+++ b/flower_shop_app/templates/flower_shop_app/index.html
@@ -11,7 +11,7 @@
 					<a href="/"><img src="{% static 'flower_shop_app/images/logo.svg' %}" alt="logo" class="logo"></a>
 					<nav>
 						<ul class="menu ficc">
-							<li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
+							<li class="menu__item"><a href="{% url 'flower_shop_app:catalog' %}" class="menu__item_link">Каталог</a></li>
 							<li class="menu__item"><a href="#recommended" class="menu__item_link">Рекомендации</a></li>
 							<li class="menu__item"><a href="#contacts" class="menu__item_link">Контакты</a></li>
 						</ul>
