--- a/flower_shop_app/static/flower_shop_app/css/main.css
+++ b/flower_shop_app/static/flower_shop_app/css/main.css
@@ -26,6 +26,10 @@ input::placeholder {
 	color: rgba(0, 0, 0, .3);
 }
 
+.checkbox.fic {
+	margin: 20px 0;
+}
+
 
 .container {
 	max-width: 1215px;
