Implemented an entry to the consultation from different pages

--- a/flower_shop_app/templates/flower_shop_app/consultation.html
+++ b/flower_shop_app/templates/flower_shop_app/consultation.html
@@ -23,9 +23,9 @@
 			<div class="singUpConsultation">
                 <form action="{% url 'flower_shop_app:created_consultation' %}" method="post" class="singUpConsultation__form">
                     <div class="title">Запись на консультацию</div>
-                    {% if form.errors %}
+                    {% if consultation_form.errors %}
                         <ul class="error_block">
-                            {% for field in form %}
+                            {% for field in consultation_form %}
                                 {% for error in field.errors %}
                                     <li>{{ error }}</li>
                                 {% endfor %}
@@ -33,11 +33,11 @@
                         </ul>
                     {% endif %}
                     {% csrf_token %}
-                    {{ form.name }}
-                    {{ form.phone_number }}
+                    {{ consultation_form.name }}
+                    {{ consultation_form.phone_number }}
                     <div class="checkbox fic">
-                        {{ form.acceptance_of_rules }}
-                        <span class="chekbox__intro">Я согласен(а) с политикой конфиденциальности</span>
+                        {{ consultation_form.acceptance_of_rules }}
+                        <span class="checkbox__intro">Я согласен(а) с политикой конфиденциальности</span>
                     </div>
                     <input type="submit" class="btn singUpConsultation__form_btn" value="Отправить">
                 </form>
@@ -45,6 +45,7 @@
 			</div>
 		</div>
 		<img src="{% static 'flower_shop_app/images/singUpConsultationImg.jpg' %}" alt="singUpConsultationImg" class="singUpConsultation__img">
-	    {% include 'flower_shop_app/footer.html' %}
+
+        {% include 'flower_shop_app/footer.html' %}
     </section>
 {% endblock %}
