--- a/flower_shop_app/static/flower_shop_app/css/main.css
+++ b/flower_shop_app/static/flower_shop_app/css/main.css
@@ -62,6 +62,12 @@ input::placeholder {
 .btn:hover {
 	background: #14A87B;
 }
+.btn_dark {
+	background: #14A87B;
+}
+.btn_dark:hover {
+	background: #00a872;
+}
 .largeBtn {
 	width: 100%;
 	height: 57px;
@@ -744,10 +750,15 @@ margin-bottom: 5px;
 	width: 365px;
 	height: 57px;
 }
+
+.singUpConsultation__form_btn_dark{
+
+}
+
 .singUpConsultation__ckekbox {
 	margin-right: 5px;
 }
-.chekbox__intro {
+.checkbox__intro {
 	font-size: 10px;
 line-height: 145.02%;
 /* identical to box height, or 15px */
@@ -758,4 +769,9 @@ line-height: 145.02%;
 color: #2D2D2D;
 
 opacity: 0.3;
+}
+
+.checkbox__intro_white {
+	color: white;
+	opacity: 1;
 }
