Fixed passing consultation_form to partial

--- a/flower_shop_app/templates/flower_shop_app/catalog.html
+++ b/flower_shop_app/templates/flower_shop_app/catalog.html
@@ -42,7 +42,7 @@
 		</div>
 	</section>
 
-    {% include 'flower_shop_app/partials/consultation_form_section.html' with consultation_form=consultation_form %}
+    {% include 'flower_shop_app/partials/consultation_form_section.html' with form=consultation_form %}
 
     {% include 'flower_shop_app/footer.html' %}
 {% endblock %}
