Added a link to the privacy policy document

--- a/flower_shop_app/static/flower_shop_app/css/main.css
+++ b/flower_shop_app/static/flower_shop_app/css/main.css
@@ -35,6 +35,10 @@ input::placeholder {
 	color: darkred;
 }
 
+.privacy_link {
+	text-decoration: none;
+}
+
 .container {
 	max-width: 1215px;
 	width: 100%;
