--- a/flower_shop_app/templates/flower_shop_app/footer.html
+++ b/flower_shop_app/templates/flower_shop_app/footer.html
@@ -12,7 +12,7 @@
                 </ul>
             </nav>
             <hr class="line"></hr>
-            <a href="#" class="footer__poli">Политика конфиденциальности</a>
+            <a href="{% static 'privacy.pdf' %}" class="footer__poli"  target="_blank">Политика конфиденциальности</a>
             <p class="footer_cop">©️2022. FlowerShop. Все права защищены</p>
         </div>
     </div>
