--- a/flower_shop_app/templates/flower_shop_app/quiz-2.html
+++ b/flower_shop_app/templates/flower_shop_app/quiz-2.html
@@ -8,25 +8,27 @@
 		<div class="container">
 			<div class="quiz">
 				<div class="quiz__back ">
-					<a href="#" class="quiz__back_link fic"><img src="{% static 'img/arrow-left.svg' %}" alt="arrow-left" class="arrowLeft">
+					<a href="{% url 'flower_shop_app:quiz_step_1' %}" class="quiz__back_link fic"><img src="{% static 'flower_shop_app/images/arrow-left.svg' %}" alt="arrow-left" class="arrowLeft">
 					<span class="quiz__back_intro">Назад</span></a>
 				</div>
 				<div class="quiz__block">
 					<h1 class="quiz__title">На какой бюджет рассчитываете?</h1>
 					<div class="quiz__elems fic">
-						<button class="quiz__elem">До 1 000 руб</button>
-						<button class="quiz__elem">1 000 - 5 000 руб</button>
-						<button class="quiz__elem">от 5 000 руб</button>
-						<button class="quiz__elem">Не имеет значения</button>
+						<form>
+							<button class="quiz__elem" type="submit" name="bouquet_price_range" value="less_than_1000">До 1 000 руб</button>
+							<button class="quiz__elem" type="submit" name="bouquet_price_range" value="from_1000_to_5000">1 000 - 5 000 руб</button>
+							<button class="quiz__elem" type="submit" name="bouquet_price_range" value="more_than_5000">от 5 000 руб</button>
+							<button class="quiz__elem" type="submit" name="bouquet_price_range" value="any">Не имеет значения</button>
+						</form>
 					</div>
 					<div class="quiz__progress">
 						<div class="quiz__progress_step">
-							<span class="quiz__progress_num">1</span>
+							<span class="quiz__progress_num">2</span>
 							<span class="quiz__progress_in"> шаг из </span>
 							<span class="quiz__progress_num">2</span>
 						</div>
 						<div class="quiz__progress_line">
-							<div class="quiz__progress_lineActive"></div>
+							<div class="quiz__progress_lineActive" style="width: 50%"></div>
 						</div>
 					</div>
 				</div>
