--- a/flower_shop_app/templates/flower_shop_app/quiz-result.html
+++ b/flower_shop_app/templates/flower_shop_app/quiz-result.html
@@ -14,10 +14,7 @@
 							<span class="card__elems_intro">Описание:</span>
 							<div class="card__items">
 								<p class="card__items_text card__items_text__first">
-									Этот букет передает атмосферу летнего утра в деревне. Букет создан из свежих полевых цветов, собранных в самом сердце природы. В состав букета входит ромашка, пионовидная роза, альстромерия, эустома, веточка эвкалипта, декоративная зелень. Все цветы собраны вручную и аккуратно высушены. 
-								</p>
-								<p class="card__items_text">
-									Букеты из полевых цветов - это не только прекрасный подарок, но и отличный способ выразить свои чувства.
+									{{ bouquet.description }}
 								</p>
 							</div>
 						</div>
@@ -25,22 +22,22 @@
 							<span class="card__elems_intro">Состав:</span>
 							<div class="card__items">
 								<p class="card__items_text card__items_text__first">
-									Альстромерия белая 1 шт., Эустома белая 1 шт, Ромашка 1 шт, Роза пионовидная 1 шт 
+									{{ bouquet.composition }}
 								</p>
 								
 							</div>
 						</div>
 					</div>
-					<img src="{% static 'img/cardImg.jpg' %}" alt="result Img" class="result__block_img">
+					<img src="{{ bouquet.image.url }}" alt="result Img" class="result__block_img">
 					<div class="result__items">
-						<div class="title result__items_title">Летнее утро</div>
-						<div class="result__items_price">3 600 руб</div>
+						<div class="title result__items_title">{{ bouquet.name }}</div>
+						<div class="result__items_price">{{ bouquet.price|floatformat }} руб</div>
 						<button class="btn result__items_btn">Заказать букет</button>
 						<hr class="result__items_line" />
 						<div class="result__items_intro">Хотите что-то более специальное?</div>
 						<div class="result__items_block">
 							<button class="btn largeBtn result__items_block__btn">Смотреть всю коллекцию</button>
-							<button class="btn largeBtn result__items_block__btn">Заказать консультацию</button>
+							<a href="#consultation" class="btn largeBtn result__items_block__btn">Заказать консультацию</a>
 						</div>
 					</div>
 				</div>	
@@ -66,7 +63,7 @@
 							<a href="tel:89111744460" class="contacts__block_tel">8 (911) 17 44 460</a>
 						</div>
 					</div>
-					<img src="{% static 'img/orderImg.jpg' %}" alt="contactsImg" class="contacts__img">
+					<img src="{% static 'flower_shop_app/images/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
 					<div class="contacts__map">
 						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
 					</div>					
