Fixed some issues

--- a/flower_shop_app/templates/flower_shop_app/index.html
+++ b/flower_shop_app/templates/flower_shop_app/index.html
@@ -34,7 +34,7 @@
 	</div>
 	<section id="recommended">
 		<div class="container">
-			<div id="recommended" class="recommended p100">
+			<div class="recommended p100">
 				<div class="title">Рекомендуем</div>
 				<div class="recommended__elems ficb">
                     {% for bouquet in recommended_bouquets %}
@@ -52,7 +52,7 @@
 	</section>
 	<section id="contacts">
 		<div class="container">
-			<div id="contacts" class="contacts">
+			<div class="contacts">
 				<div class="title">Как нас найти</div>
 				<div class="contacts__elems ficb">
 					<div class="contacts__block">
