--- a/flower_shop_app/templates/flower_shop_app/base.html
+++ b/flower_shop_app/templates/flower_shop_app/base.html
@@ -7,10 +7,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Unbounded:wght@700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="{% static 'flower_shop_app/css/main.css' %}">
+    <link rel="stylesheet" href="{% static 'flower_shop_app/css/alertify/alertify.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'flower_shop_app/css/alertify/semantic.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'flower_shop_app/css/main.css' %}">
+    <script src="{% static 'flower_shop_app/js/alertify.min.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+    {% include 'flower_shop_app/partials/messages.html' with messages=messages %}
     {% block content %}{% endblock %}
 </body>
 </html>
