Enable buttons and consultation form on quiz_result page

--- a/flower_shop_app/templates/flower_shop_app/index.html
+++ b/flower_shop_app/templates/flower_shop_app/index.html
@@ -25,7 +25,7 @@
 					<div class="banner__block">
 						<h1 class="banner__title">Мастерская цветов</h1>
 						<p class="banner__text">Подберем для вас букет за два шага, который идеально подойдет под вашу ситуацию</p>
-						<button class="btn banner__btn">Подобрать букет</button>
+						<a href="{% url 'flower_shop_app:quiz_step_1' %}"><button class="btn banner__btn">Подобрать букет</button></a>
 					</div>
 					<img src="{% static 'flower_shop_app/images/bannerImg.png' %}" alt="banner Img" class="banner__img">
 				</div>
