Use django form in order template

--- a/flower_shop_app/templates/flower_shop_app/payment.html
+++ b/flower_shop_app/templates/flower_shop_app/payment.html
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 		</div>
-		<img src="{% static 'img/orderImg.jpg' %}" alt="orderImg" class="order__img">
+		<img src="{% static 'flower_shop_app/images/orderImg.jpg' %}" alt="orderImg" class="order__img">
 	</section>
 	{% include 'flower_shop_app/footer.html' %}
 {% endblock %}
