--- a/flower_shop_app/templates/flower_shop_app/order.html
+++ b/flower_shop_app/templates/flower_shop_app/order.html
@@ -10,38 +10,29 @@
 				<div class="order__block">
 					<div class="order_items">
 						<div class="title">Оформление доставки</div>
-						<form action="#" class="order__form">
+						<form action="#" class="order__form" method="post">
+							{% csrf_token %}
+							{% if order_form.errors %}
+                			<ul class="error_block">
+                    			{% for field in order_form %}
+                    			{% for error in field.errors %}
+                    			<li>{{ error }}</li>
+                    			{% endfor %}
+                    			{% endfor %}
+							</ul>
+							{% endif %}
 							<div class="order__form_block ficb">
-								<input type="text" name="fname" class="order__form_input" placeholder="Введите Имя" required>
-								<input type="text" name="tel" class="order__form_input" placeholder="+ 7 (999) 000 00 00" required>
-								<input type="text" name="adres" class="order__form_input" placeholder="Адрес доставки" required>
+								{{ order_form.client_name }}
+								{{ order_form.phone_number }}
+								{{ order_form.address }}
 							</div>
 							<div class="order__form_btns fic">
+								{% for radio in order_form.delivery_time %}
 								<div class="order__form_radioBlock ">
-									<input type="radio" name="orderTime" id="radio1" value="Как можно скорее" class="order__form_radio" />
-									<label for="radio1" class="radioLable">Как можно скорее</label>
+									{{ radio.tag }}
+									<label for="{{ radio.id_for_label }}" class="radioLable">{{ radio.choice_label }}</label>
 								</div>
-								<div class="order__form_radioBlock">
-									<input type="radio" name="orderTime" id="radio2" value="с 10:00 до 12:00" class="order__form_radio" />
-									<label for="radio2" class="radioLable">с 10:00 до 12:00</label>
-								</div>
-								<div class="order__form_radioBlock">
-									<input type="radio" name="orderTime" id="radio3" value="с 12:00 до 14:00" class="order__form_radio" />
-									<label for="radio3" class="radioLable">с 12:00 до 14:00</label>
-								</div>
-								<div class="order__form_radioBlock">
-									<input type="radio" name="orderTime" id="radio4" value="с 14:00 до 16:00" class="order__form_radio" />
-									<label for="radio4" class="radioLable">с 14:00 до 16:00</label>
-								</div>
-								<div class="order__form_radioBlock">
-									<input type="radio" name="orderTime" id="radio5" value="с 16:00 до 18:00" class="order__form_radio" />
-									<label for="radio5" class="radioLable">с 16:00 до 18:00</label>
-								</div>
-								<div class="order__form_radioBlock">
-									<input type="radio" name="orderTime" id="radio6" value="с 18:00 до 20:00" class="order__form_radio" />
-									<label for="radio6" class="radioLable">с 18:00 до 20:00</label>
-								</div>
-								
+								{% endfor %}
 							</div>
 							<div class="order__form_line"></div>
 							<div class="order__form_btns ficb">
@@ -54,7 +45,7 @@
 				</div>
 			</div>
 		</div>
-		<img src="{% static 'img/orderImg.jpg' %}" alt="orderImg" class="order__img">
+		<img src="{% static 'flower_shop_app/images/orderImg.jpg' %}" alt="orderImg" class="order__img">
 	</section>
 	{% include 'flower_shop_app/footer.html' %}
 	<script>
