--- a/flower_shop_app/templates/flower_shop_app/catalog.html
+++ b/flower_shop_app/templates/flower_shop_app/catalog.html
@@ -26,12 +26,7 @@
                 <div class="catalog__block">
                     <div class="recommended__elems ficb recommended__elems_first">
                         {% for bouquet in bouquets.object_list %}
-                            <div class="recommended__block" style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover;">
-                                <div class="recommended__block_elems ficb">
-                                    <span class="recommended__block_intro">{{ bouquet.name }}</span>
-                                    <span class="recommended__block_price">{{ bouquet.price|floatformat }} руб</span>
-                                </div>
-                            </div>
+                            {% include 'flower_shop_app/partials/bouquet_card.html' with bouquet=bouquet %}
                         {% endfor %}
                     </div>
                     <div class="pagination_wrapper">
