--- a/flower_shop_app/templates/flower_shop_app/index.html
+++ b/flower_shop_app/templates/flower_shop_app/index.html
@@ -38,12 +38,7 @@
 				<div class="title">Рекомендуем</div>
 				<div class="recommended__elems ficb">
                     {% for bouquet in recommended_bouquets %}
-                       <div class="recommended__block" style="background: url('{{ bouquet.image.url }}') no-repeat center bottom / cover;">
-						    <div class="recommended__block_elems ficb">
-					    		<span class="recommended__block_intro">{{ bouquet.name }}</span>
-					    		<span class="recommended__block_price">{{ bouquet.price|floatformat }} руб</span>
-					    	</div>
-					    </div>
+                        {% include 'flower_shop_app/partials/bouquet_card.html' with bouquet=bouquet %}
                     {% endfor %}
 				</div>
 				<button class="btn recommended__btn">Показать всю коллекцию</button>
