Fixed some template issues

--- a/flower_shop_app/templates/flower_shop_app/bouquet_detail.html
+++ b/flower_shop_app/templates/flower_shop_app/bouquet_detail.html
@@ -4,6 +4,8 @@
 {% block title %}{{ bouquet.name }}{% endblock %}
 
 {% block content %}
+    {% include 'flower_shop_app/partials/header.html' %}
+
 	<section id="card">
 		<div class="container">
 			<div class="card ficb">
