--- a/flower_shop_app/templates/flower_shop_app/quiz-1.html
+++ b/flower_shop_app/templates/flower_shop_app/quiz-1.html
@@ -4,6 +4,8 @@
 {% block title %}Подбор букета{% endblock %}
 
 {% block content %}
+    {% include 'flower_shop_app/partials/header.html' %}
+
 	<section id="quiz">
 		<div class="container">
 			<div class="quiz">
