--- a/flower_shop_app/static/flower_shop_app/css/main.css
+++ b/flower_shop_app/static/flower_shop_app/css/main.css
@@ -824,3 +824,33 @@ opacity: 0.3;
 	right: auto;
 }
 
+.full_width_btn_link {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 40px;
+	height: 57px;
+	margin-top: 30px;
+	text-decoration: none;
+	vertical-align: center;
+}
+
+.btn_link_light {
+	background: #D9FAF1;
+	color: #17CF97;
+}
+
+.btn_link_light:hover {
+	background: #17CF97;
+	color: #FFFFFF;
+}
+
+.btn_link_dark {
+	background: #17CF97;
+	color: #FFFFFF;
+}
+
+.btn_link_dark:hover {
+	background: #14A87B;
+}
+
