--- a/flower_shop_app/templates/flower_shop_app/catalog.html
+++ b/flower_shop_app/templates/flower_shop_app/catalog.html
@@ -5,20 +5,8 @@
 {% block title %}Каталог{% endblock %}
 
 {% block content %}
-    <header id="header">
-		<div class="container">
-			<div class="header ficb">
-				<a href="{% url 'flower_shop_app:index' %}"><img src="{% static 'flower_shop_app/images/logo.svg' %}" alt="logo" class="logo"></a>
-				<nav>
-					<ul class="menu ficc">
-						<li class="menu__item"><a href="#" class="menu__item_link">Каталог</a></li>
-						<li class="menu__item"><a href="{% url 'flower_shop_app:index' %}#recommended" class="menu__item_link">Рекомендации</a></li>
-						<li class="menu__item"><a href="{% url 'flower_shop_app:index' %}#contacts" class="menu__item_link">Контакты</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
-	</header>
+    {% include 'flower_shop_app/partials/header.html' %}
+
 	<section id="catalog">
 		<div class="container p100">
 			<div class="catalog">
@@ -38,6 +26,5 @@
 	</section>
 
     {% include 'flower_shop_app/partials/consultation_form_section.html' with form=consultation_form %}
-
     {% include 'flower_shop_app/footer.html' %}
 {% endblock %}
