--- a/flower_shop_app/templates/flower_shop_app/index.html
+++ b/flower_shop_app/templates/flower_shop_app/index.html
@@ -5,20 +5,8 @@
 
 {% block content %}
     <div class="mainBg">
-		<header id="header">
-			<div class="container">
-				<div class="header ficb">
-					<a href="/"><img src="{% static 'flower_shop_app/images/logo.svg' %}" alt="logo" class="logo"></a>
-					<nav>
-						<ul class="menu ficc">
-							<li class="menu__item"><a href="{% url 'flower_shop_app:catalog' %}" class="menu__item_link">Каталог</a></li>
-							<li class="menu__item"><a href="#recommended" class="menu__item_link">Рекомендации</a></li>
-							<li class="menu__item"><a href="#contacts" class="menu__item_link">Контакты</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
+		{% include 'flower_shop_app/partials/header.html' %}
+
 		<section id="banner">
 			<div class="container">
 				<div class="banner">
@@ -41,40 +29,14 @@
                         {% include 'flower_shop_app/partials/bouquet_card.html' with bouquet=bouquet %}
                     {% endfor %}
 				</div>
-				<button class="btn recommended__btn">Показать всю коллекцию</button>
-			</div>
-		</div>
-	</section>
-	<section id="contacts">
-		<div class="container">
-			<div class="contacts">
-				<div class="title">Как нас найти</div>
-				<div class="contacts__elems ficb">
-					<div class="contacts__block">
-						<div class="contacts__block_item ficc">
-							<div class="contacts__block_intro">ул. Пушкинская, 69</div>
-							<a href="tel:89111744460" class="contacts__block_tel">8 (911) 17 44 460</a>
-						</div>
-						<div class="contacts__block_item ficc">
-							<div class="contacts__block_intro">ул. Жукова, 13</div>
-							<a href="tel:89112855571" class="contacts__block_tel">8 (911) 28 55 571</a>
-						</div>
-						<div class="contacts__block_item ficc">
-							<div class="contacts__block_intro">ул. Красная, 384</div>
-							<a href="tel:89113966682" class="contacts__block_tel">8 (911) 39 66 682</a>
-						</div>
-					</div>
-					<img src="{% static 'flower_shop_app/images/contactsImg.jpg' %}" alt="contactsImg" class="contacts__img">
-					<div class="contacts__map">
-						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af39d7a7f1829359b6ffe21ab6356fcaeace17d528d6522dba8772f885c8b1a7d&amp;width=398&amp;height=316&amp;lang=ru_RU&amp;scroll=true"></script>
-					</div>
-				</div>
-				<button class="btn contacts__btn">Заказать доставку</button>
+                <a class="" href="{% url 'flower_shop_app:catalog' %}">
+                    <button class="btn recommended__btn">Показать всю коллекцию</button>
+                </a>
 			</div>
 		</div>
 	</section>
 
+    {% include 'flower_shop_app/partials/contacts_section.html' with show_delivery_btn=True %}
     {% include 'flower_shop_app/partials/consultation_form_section.html' with form=consultation_form %}
-
     {% include 'flower_shop_app/footer.html' %}
 {% endblock %}
