Implemented bouquet cards loading using htmx

--- a/flower_shop_app/templates/flower_shop_app/base.html
+++ b/flower_shop_app/templates/flower_shop_app/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'flower_shop_app/css/alertify/semantic.min.css' %}"/>
     <link rel="stylesheet" href="{% static 'flower_shop_app/css/main.css' %}">
     <script src="{% static 'flower_shop_app/js/alertify.min.js' %}"></script>
+    <script src="{% static 'flower_shop_app/js/htmx.min.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
