--- a/flower_shop_app/templates/flower_shop_app/index.html
+++ b/flower_shop_app/templates/flower_shop_app/index.html
@@ -24,7 +24,7 @@
 		<div class="container">
 			<div class="recommended p100">
 				<div class="title">Рекомендуем</div>
-				<div class="recommended__elems ficb">
+				<div class="recommended__elems ficb fade_in">
                     {% for bouquet in recommended_bouquets %}
                         {% include 'flower_shop_app/partials/bouquet_card.html' with bouquet=bouquet %}
                     {% endfor %}
