--- a/flower_shop_app/static/flower_shop_app/css/main.css
+++ b/flower_shop_app/static/flower_shop_app/css/main.css
@@ -854,3 +854,35 @@ opacity: 0.3;
 	background: #14A87B;
 }
 
+.fade_in {
+	animation: fadeIn 1s;
+  	-webkit-animation: fadeIn 1s;
+  	-moz-animation: fadeIn 1s;
+  	-o-animation: fadeIn 1s;
+  	-ms-animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-moz-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-webkit-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-o-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+@-ms-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
