--- a/flower_shop_app/templates/flower_shop_app/payment.html
+++ b/flower_shop_app/templates/flower_shop_app/payment.html
@@ -10,22 +10,23 @@
 				<div class="order__block">
 					<div class="order_items">
 						<div class="title">Оплата</div>
-						<form action="#" class="order__form orderStep_form">
+						<form action="#" class="order__form orderStep_form" method="POST">
+							{% csrf_token %}
 							<div class="order__form_block">
 								<div class="order__form_items">
 									<div class="order__form_intro">номер карты</div>
-									<input type="text" name="cardNum" class="order__form_input orderStep_form_input" placeholder="Введите номер" required>
+									<input type="text" name="card_number" class="order__form_input orderStep_form_input" placeholder="Введите номер" required>
 									<div class="order__form_item fic">
-										<input type="text" name="cardMm" class="order__form_input orderStep_form_input" placeholder="ММ" required>
-										<input type="text" name="cardGg" class="order__form_input orderStep_form_input" placeholder="ГГ" required>
+										<input type="text" name="card_month" class="order__form_input orderStep_form_input" placeholder="ММ" required>
+										<input type="text" name="card_year" class="order__form_input orderStep_form_input" placeholder="ГГ" required>
 									</div>
 									
-									<input type="text" name="cardFname" class="order__form_input orderStep_form_input" placeholder="Имя владельца" required>
-									<input type="text" name="cardCvc" class="order__form_input orderStep_form_input" placeholder="CVC" required>
+									<input type="text" name="card_name" class="order__form_input orderStep_form_input" placeholder="Имя владельца" required>
+									<input type="text" name="card_cvc" class="order__form_input orderStep_form_input" placeholder="CVC" required>
 								</div>
 								<div class="order__form_items">
 									<div class="order__form_intro">Ваш e-mail (необязательно)</div>
-									<input type="email" name="mail" class="order__form_input orderStep_form_input" placeholder="pochta@mail.ru">
+									<input type="email" name="email" class="order__form_input orderStep_form_input" placeholder="pochta@mail.ru">
 								</div>
 							</div>
 							<div class="order__form_line"></div>
