--- a/flower_shop_app/templates/flower_shop_app/quiz-2.html
+++ b/flower_shop_app/templates/flower_shop_app/quiz-2.html
@@ -10,27 +10,25 @@
 		<div class="container">
 			<div class="quiz">
 				<div class="quiz__back ">
-					<a href="{% url 'flower_shop_app:quiz_step_1' %}" class="quiz__back_link fic"><img src="{% static 'flower_shop_app/images/arrow-left.svg' %}" alt="arrow-left" class="arrowLeft">
-					<span class="quiz__back_intro">Назад</span></a>
 				</div>
 				<div class="quiz__block">
-					<h1 class="quiz__title">На какой бюджет рассчитываете?</h1>
+					<h1 class="quiz__title">Выберите основной цвет букета:</h1>
 					<div class="quiz__elems fic">
 						<form>
-							<button class="quiz__elem" type="submit" name="bouquet_price_range" value="less_than_1000">До 1 000 руб</button>
-							<button class="quiz__elem" type="submit" name="bouquet_price_range" value="from_1000_to_5000">1 000 - 5 000 руб</button>
-							<button class="quiz__elem" type="submit" name="bouquet_price_range" value="more_than_5000">от 5 000 руб</button>
-							<button class="quiz__elem" type="submit" name="bouquet_price_range" value="any">Не имеет значения</button>
+							{% for color_theme in color_themes %}
+							<button class="quiz__elem" type="submit" name="color_theme_id" value="{{ color_theme.id }}">{{ color_theme.name }}</button>
+							{% endfor %}
+							<button class="quiz__elem" type="submit" name="color_theme_id" value="no_tag">Подойдет любой</button>
 						</form>
 					</div>
 					<div class="quiz__progress">
 						<div class="quiz__progress_step">
 							<span class="quiz__progress_num">2</span>
 							<span class="quiz__progress_in"> шаг из </span>
-							<span class="quiz__progress_num">2</span>
+							<span class="quiz__progress_num">3</span>
 						</div>
 						<div class="quiz__progress_line">
-							<div class="quiz__progress_lineActive" style="width: 50%"></div>
+							<div class="quiz__progress_lineActive" style="width: 33%"></div>
 						</div>
 					</div>
 				</div>
